--- a/styles.css
+++ b/styles.css
@@ -15,10 +15,239 @@ a {
   cursor: pointer;
 }
 
+p {
+  text-align: center;
+  line-height: 1.5rem;
+}
+
+.footer {
+  width: 100%;
+}
+
+/* div {
+  z-index: 1;
+} */
+
+.navbar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  height: 75px;
+  padding: 0 20px;
+  background-color: white;
+  z-index: 99;
+}
+
+.navbar-sizer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  height: 100%;
+  max-width: 1130px;
+  /* background-color: orange;  */
+}
+
+.navbar-logo {
+  display: flex;
+  justify-content: center;
+  height: 37px;
+}
+
+.navbar-items--ul {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  list-style: none;
+}
+
+.navbar-items--li {
+  height: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-left: 20px;
+  padding-right: 20px;
+
+}
+
+.navbar-items--li a {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+}
+
+/* mobilny navbar */
+
+.navbar-mobile-overlay {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 100;
+  top: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.9);
+  overflow-x: hidden;
+  transition-duration: 0.5s;
+}
+
+.navbar-mobile--close-btn {
+  position: absolute;
+  top: 10px;
+  right: 250px;
+  font-size: 30px;
+
+  color: red;
+}
+
+.navbar-mobile-logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1);
+}
+
+.navbar-mobile-list-div {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 280px;
+  min-height: 100vh;
+  background-color: white;
+}
+
+.navbar-mobile-items--ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+.navbar-mobile-items--li {
+  width: 100%;
+  height: 34px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 20px;
+  font-size: 20px;
+  color: black;
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1);
+}
+
+.navbar-mobile-items--li-a {
+  color: black;
+  width: 100%;
+}
+
+.navbar-mobile-dropdown--li {
+  font-size: 18px;
+  margin: 10px 25px;
+}
+
+.content {
+  width: 95%;
+  max-width: 1250px;
+}
+
+.top-div-margin {
+  margin-top: 75px;
+}
+
+.part-container {
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+
+}
+
+.ball-left {
+  position: absolute;
+  left: 0;
+  top: 75px;
+  z-index: -2;
+}
+
+.ball-right {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-image: url(./img/background-img.png);
+  z-index: -1;
+}
+
+.b-shape2 {
+  position: absolute;
+  top: 75px;
+  right: 50px;
+  width: 200px;
+  z-index: 1;
+}
+
+.b-shape3 {
+  position: absolute;
+  top: 0;
+  right: 0;
+  /* width: 200px; */
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+.show-full-elements,
+.show-semi-res-elements {
+  display: none;
+}
+
+.hide-full-elements {
+  display: block;
+}
+
+
+
+/* mobilny navbar */
+
 @media (min-width: 425px) {}
 
-@media (min-width: 768px) {}
+@media (min-width: 768px) {
+  .show-semi-res-elements {
+    display: block;
+  }
+}
 
-@media (min-width: 1030px) {}
+@media (min-width: 1030px) {
+  .show-full-elements {
+    display: block;
+  }
+
+  .hide-full-elements {
+    display: none;
+  }
+}
 
 @media (min-width: 1440px) {}
